exports[`test renders ./components/input/demo/addon.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px;">
    <span
      class="ant-input-wrapper ant-input-group">
      <span
        class="ant-input-group-addon">
        Http://
      </span>
      <input
        class="ant-input"
        type="text"
        value="mysite" />
      <span
        class="ant-input-group-addon">
        .com
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px;">
    <span
      class="ant-input-wrapper ant-input-group">
      <span
        class="ant-input-group-addon">
        <div
          class="ant-select ant-select-enabled"
          style="width:80px;">
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-select-selection
                      ant-select-selection--single"
            role="combobox"
            tabindex="0">
            <div
              class="ant-select-selection__rendered">
              <div
                class="ant-select-selection-selected-value"
                style="display:block;opacity:1;"
                title="Http://">
                Http://
              </div>
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none;"
              unselectable="unselectable">
              <b />
            </span>
          </div>
        </div>
      </span>
      <input
        class="ant-input"
        type="text"
        value="mysite" />
      <span
        class="ant-input-group-addon">
        <div
          class="ant-select ant-select-enabled"
          style="width:70px;">
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-select-selection
                      ant-select-selection--single"
            role="combobox"
            tabindex="0">
            <div
              class="ant-select-selection__rendered">
              <div
                class="ant-select-selection-selected-value"
                style="display:block;opacity:1;"
                title=".com">
                .com
              </div>
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none;"
              unselectable="unselectable">
              <b />
            </span>
          </div>
        </div>
      </span>
    </span>
  </div>
  <div
    style="margin-bottom:16px;">
    <span
      class="ant-input-wrapper ant-input-group">
      <input
        class="ant-input"
        type="text"
        value="mysite" />
      <span
        class="ant-input-group-addon">
        <i
          class="anticon anticon-setting" />
      </span>
    </span>
  </div>
</div>
`;

exports[`test renders ./components/input/demo/autosize-textarea.md correctly 1`] = `
<div>
  <textarea
    class="ant-input"
    placeholder="Autosize height based on content lines"
    type="textarea" />
  <div
    style="margin:24px 0;" />
  <textarea
    class="ant-input"
    placeholder="Autosize height with minimum and maximum number of lines"
    type="textarea" />
</div>
`;

exports[`test renders ./components/input/demo/basic.md correctly 1`] = `
<input
  class="ant-input"
  placeholder="Basic usage"
  type="text" />
`;

exports[`test renders ./components/input/demo/group.md correctly 1`] = `
<div>
  <span
    class="ant-input-group ant-input-group-lg">
    <div
      class="ant-col-4">
      <input
        class="ant-input"
        type="text"
        value="0571" />
    </div>
    <div
      class="ant-col-8">
      <input
        class="ant-input"
        type="text"
        value="26888888" />
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact">
    <input
      class="ant-input"
      style="width:20%;"
      type="text"
      value="0571" />
    <input
      class="ant-input"
      style="width:30%;"
      type="text"
      value="26888888" />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact">
    <div
      class="ant-select ant-select-enabled">
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
                  ant-select-selection--single"
        role="combobox"
        tabindex="0">
        <div
          class="ant-select-selection__rendered">
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1;"
            title="Zhejiang">
            Zhejiang
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none;"
          unselectable="unselectable">
          <b />
        </span>
      </div>
    </div>
    <input
      class="ant-input"
      style="width:50%;"
      type="text"
      value="Xihu District, Hangzhou" />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact">
    <div
      class="ant-select ant-select-enabled">
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
                  ant-select-selection--single"
        role="combobox"
        tabindex="0">
        <div
          class="ant-select-selection__rendered">
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1;"
            title="Option1">
            Option1
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none;"
          unselectable="unselectable">
          <b />
        </span>
      </div>
    </div>
    <input
      class="ant-input"
      style="width:50%;"
      type="text"
      value="input content" />
    <div
      class="ant-input-number">
      <div
        class="ant-input-number-handler-wrap">
        <span
          class="ant-input-number-handler ant-input-number-handler-up "
          unselectable="unselectable">
          <span
            class="ant-input-number-handler-up-inner"
            unselectable="unselectable" />
        </span>
        <span
          class="ant-input-number-handler ant-input-number-handler-down "
          unselectable="unselectable">
          <span
            class="ant-input-number-handler-down-inner"
            unselectable="unselectable" />
        </span>
      </div>
      <div
        class="ant-input-number-input-wrap">
        <input
          autocomplete="off"
          class="ant-input-number-input"
          max="Infinity"
          min="-Infinity"
          value="" />
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact">
    <input
      class="ant-input"
      style="width:50%;"
      type="text"
      value="input content" />
    <span
      class="ant-calendar-picker">
      <span>
        <input
          class="ant-calendar-picker-input ant-input"
          placeholder="请选择日期"
          readonly=""
          value="" />
        <span
          class="ant-calendar-picker-icon" />
      </span>
    </span>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact">
    <div
      class="ant-select ant-select-enabled">
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
                  ant-select-selection--single"
        role="combobox"
        tabindex="0">
        <div
          class="ant-select-selection__rendered">
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1;"
            title="Option1-1">
            Option1-1
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none;"
          unselectable="unselectable">
          <b />
        </span>
      </div>
    </div>
    <div
      class="ant-select ant-select-enabled">
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
                  ant-select-selection--single"
        role="combobox"
        tabindex="0">
        <div
          class="ant-select-selection__rendered">
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1;"
            title="Option2-2">
            Option2-2
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none;"
          unselectable="unselectable">
          <b />
        </span>
      </div>
    </div>
  </span>
  <br />
</div>
`;

exports[`test renders ./components/input/demo/presuffix.md correctly 1`] = `
<span
  class="ant-input-preSuffix-wrapper">
  <span
    class="ant-input-prefix">
    <i
      class="anticon anticon-user" />
  </span>
  <input
    class="ant-input"
    placeholder="Enter your userName"
    type="text"
    value="" />
</span>
`;

exports[`test renders ./components/input/demo/search-input.md correctly 1`] = `
<span
  class="ant-input-preSuffix-wrapper"
  style="width:200px;">
  <input
    class="ant-input ant-input-search"
    placeholder="input search text"
    type="text" />
  <span
    class="ant-input-suffix">
    <i
      class="anticon anticon-search ant-input-search-icon" />
  </span>
</span>
`;

exports[`test renders ./components/input/demo/size.md correctly 1`] = `
<div
  class="example-input">
  <input
    class="ant-input ant-input-lg"
    placeholder="large size"
    type="text" />
  <input
    class="ant-input"
    placeholder="default size"
    type="text" />
  <input
    class="ant-input ant-input-sm"
    placeholder="small size"
    type="text" />
</div>
`;

exports[`test renders ./components/input/demo/textarea.md correctly 1`] = `
<textarea
  class="ant-input"
  rows="4"
  type="textarea" />
`;

exports[`test renders ./components/input/demo/tooltip.md correctly 1`] = `
<div
  class="numeric-input-demo">
  <div>
    <input
      class="ant-input"
      maxlength="25"
      placeholder="input a number"
      type="text"
      value="" />
  </div>
</div>
`;
